--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.11.1",
     "jquery": "^3.4.1",
+    "leader-line": "^1.0.5",
     "vue": "^2.5.2",
     "vue-area-linkage": "^5.1.0",
     "vue-router": "^3.0.7",
